--- a/citation.bib
+++ b/citation.bib
@@ -1,6 +1,6 @@
 
 @Manual{,
-  title = {LandR_speciesParameters},
+  title = {Biomass_speciesParameters},
   author = {{Authors}},
   organization = {Organization},
   address = {Somewhere, Someplace},
