--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -52,15 +52,28 @@ parameters <- list(Biomass_speciesParameters =
                           constrainMortalityShape = list(
                             "Abie_bal" = c(15,25),
                             "Abie_las" = c(15,25),
-                            "Betu_pap" = c(15,25),
+                            "Betu_pap" = c(15,20),
                             "Lari_lar" = c(20,25),
-                            "Pice_eng" = c(15,25),
-                            "Pice_gla" = c(15,25),
+                            "Pice_eng" = c(20,25),
+                            "Pice_gla" = c(20,25),
                             "Pice_mar" = c(15,25),
                             "Pinu_ban" = c(15,25),
                             "Pinu_con" = c(15,25), 
-                            "Popu_tre" = c(15,25),
+                            "Popu_tre" = c(20,25),
                             "Pseu_men" = c(20,25)
+                          ),
+                          constrainGrowthCurve = list(
+                            "Abie_bal" = c(0, 1),
+                            "Abie_las" = c(0, 1),
+                            "Betu_pap" = c(0, 1),
+                            "Lari_lar" = c(0, 1),
+                            "Pice_eng" = c(0, 1),
+                            "Pice_gla" = c(0, 1),
+                            "Pice_mar" = c(0, 1),
+                            "Pinu_ban" = c(0, 1),
+                            "Pinu_con" = c(0, 1), 
+                            "Popu_tre" = c(0, 1),
+                            "Pseu_men" = c(0, 1)
                           ),
                           quantileAgeSubset = list(
                             "Abie_bal" = 95, #N = 43 w/ 95 subset
