--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -3,25 +3,32 @@ title: "Biomass_speciesParameters"
 author: ""
 date: "17 September 2019"
 output: pdf_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 # Overview
 
-Provide an overview of what the module does / how to use the module.
+This module matches simulated growth curves of theoretical species with varying `maxANPP`, growth curve and mortality shape values (using LandR Biomass_core) against growth curves derived from Permanent Sample Plots (PSP data) across Western Canada to find the most likely combination of traits, and to adjust the `maxB` trait in respect to the observed maximum biomass on the landscape.
 
-Module documentation should be written so that others can use your module.
-This is a template for module documentation, and should be changed to reflect your module.
+As of 2020-04-08, the PSP data needed for this module is not freely available, and data sharing agreements must be obtained from the governments of SK, AB, and BC. 
 
-## R Markdown
+Each species grows as a single cohort with no understory (i.e., no dispersal, regeneration, or disturbance).
+The full factorial included `mortalityshape` 5 to 25, in increments of 1; `growthcurve` 0 to 1, in increments of 0.1, 
+`mANPPproportion` (the proportion of max ANPP to `maxB`) from .25 to 10 in increments of .25, and longevity from 150 to 700 in increments of 25. 
+The results were saved in a combination of tables so that the module can be run without needing to simulate the factorial.
 
-R Markdown syntax allows R code, outputs, and figures to be rendered in the documentation.
-
-For help writing in R Markdown, see http://rmarkdown.rstudio.com/.
+The module is intended to be used in combination with `Biomass_borealDataPrep.` 
+However, users may want to experiment with the traits as well as examine the output GAMMs used to select traits. 
+Therefore, it can be run as a stand-alone. The parameters are applied to all species (rather than each individually),
+thus users may want to run several times, varying parameters, select the traits they feel best capture the true growth curve
+(the PSPs are quite limited in their representation of stand dynamics for those stands older than 200 yrs), and modify the traits
+directly using `Biomass_borealDataPrep.` 
 
 # Usage
 
 ```{r module_usage}
-library(SpaDES)
+library(SpaDES.core)
 
 setPaths(modulePath = file.path("../"))
 getPaths() # shows where the 4 relevant paths are
@@ -91,10 +98,7 @@ parameters <- list(Biomass_speciesParameters =
 
 
 mySim <- simInit(times = times, params = parameters, modules = modules, objects = objects)
-
 mySimOut <- spades(mySim)
-
-
 ```
 
 
@@ -112,6 +116,8 @@ Write what is saved.
 
 # Data dependencies
 
+<!-- TODO: update Rmd to use metadata for params/inputs/outputs & symlink Rmd as README -->
+
 ## Input data
 
 How to obtain input data, and a description of the data required by the module.
@@ -124,4 +130,3 @@ Description of the module outputs.
 # Links to other modules
 
 Describe any anticipated linkages to other modules.
-
