--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -36,14 +36,14 @@ getPaths() # shows where the 4 relevant paths are
 
 times <- list(start = 0, end = 10)
 
-modules <- list("Biomass_speciesParameters", "PSP_Clean")
+modules <- list("Biomass_speciesParameters")
 
 #the purpose of this table is experiment with modify longevity - longevity is not estimated by the module
 #but it is used in trait estimation. 
 inputSpecies <- data.table(species = c("Abie_bal", 'Abie_las', 'Betu_pap', 'Lari_lar',
                                         'Pice_eng', 'Pice_gla', 'Pice_mar', 'Pinu_ban',
                                        'Pinu_con', 'Pseu_men', "Popu_tre"),
-                           longevity = c(300, 300, 160, 160, 330, 250, 200, 150, 250, 300, 200),
+                           longevity = c(300, 300, 160, 160, 330, 250, 250, 175, 250, 300, 200),
                            mortalityshape = 15, growthcurve = 0)
 objects <- list(species = inputSpecies)
 
