--- a/Biomass_speciesParameters.Rmd
+++ b/Biomass_speciesParameters.Rmd
@@ -1,15 +1,23 @@
 ---
 title: "Biomass_speciesParameters"
 author: ""
-date: "17 September 2019"
-output: pdf_document
-editor_options: 
+date: "17 September 2019; updated Sept 30, 2021"
+output:
+  html_document:
+    keep_md: yes
+editor_options:
   chunk_output_type: console
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, eval = FALSE, results = "hold")
+```
+
+[![Gitter](https://badges.gitter.im/PredictiveEcology/LandR_Biomass.svg)](https://gitter.im/PredictiveEcology/LandR_Biomass?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge)
+
 # Overview
 
-This module matches simulated growth curves of theoretical species with varying `maxANPP`, growth curve and mortality shape values (using LandR Biomass_core) against growth curves derived from Permanent Sample Plots (PSP data) across Western Canada to find the most likely combination of traits, and to adjust the `maxB` trait in respect to the observed maximum biomass on the landscape.
+This module matches simulated growth curves of theoretical species with varying `maxANPP`, growth curve and mortality shape values (using LandR `Biomass_core`) against growth curves derived from Permanent Sample Plots (PSP data) across Western Canada to find the most likely combination of traits, and to adjust the `maxB` trait in respect to the observed maximum biomass on the landscape.
 
 As of 2020-04-08, the PSP data needed for this module is not freely available, and data sharing agreements must be obtained from the governments of SK, AB, and BC. 
 
@@ -17,6 +25,8 @@ Each species grows as a single cohort with no understory (i.e., no dispersal, re
 The full factorial included `mortalityshape` 5 to 25, in increments of 1; `growthcurve` 0 to 1, in increments of 0.1, 
 `mANPPproportion` (the proportion of max ANPP to `maxB`) from .25 to 10 in increments of .25, and longevity from 150 to 700 in increments of 25. 
 The results were saved in a combination of tables so that the module can be run without needing to simulate the factorial.
+
+## Links with other modules
 
 The module is intended to be used in combination with `Biomass_borealDataPrep.` 
 However, users may want to experiment with the traits as well as examine the output GAMMs used to select traits. 
@@ -28,8 +38,8 @@ directly using `Biomass_borealDataPrep.`
 # Usage
 
 ```{r module_usage}
-library(SpaDES)
 library(data.table)
+library(SpaDES.core)
 
 setPaths(modulePath = file.path("../"))
 getPaths() # shows where the 4 relevant paths are
@@ -89,8 +99,6 @@ mySim <- simInit(times = times, params = parameters, modules = modules, objects 
 mySimOut <- spades(mySim)
 ```
 
-
-
 # Events
 
 Describe what happens for each event type.
@@ -103,19 +111,53 @@ Write what is plotted.
 
 Write what is saved.
 
+# Downloads
+
+During the `simInit` call, if the user does not provide alternatives for the expected inputs, the module will download 3 large `.tar` files (~2 GB each) and 1 `.zip` file (~45 MB) from the internet.
+
 # Data dependencies
 
-<!-- TODO: update Rmd to use metadata for params/inputs/outputs & symlink Rmd as README -->
+**NOTE:** all raster _inputs_ should be at the scale of `rasterToMatchLarge`/`studyAreaLarge` and all raster _outputs_ will be at the scale of `rasterToMatch`/`studyArea.`
 
-## Input data
+## Module parameters
 
-How to obtain input data, and a description of the data required by the module.
-If `sourceURL` is specified, `downloadData("Biomass_speciesParameters", "path/to/modules/dir")` may be sufficient.
+```{r moduleParams, echo = FALSE, eval = TRUE}
+df_params <- SpaDES.core::moduleParams("Biomass_speciesParameters", "..")
+knitr::kable(df_params)
+```
 
-## Output data
+## Inputs
 
-Description of the module outputs.
+This module has several input requirements. 
+One is a study area, which should be provided as a `SpatialPolygonsDataFrame`, and named `studyAreaLarge`.
+This should be inside the boundaries of the boreal forest of Canada. 
+When first running the code in this `.Rmd` file, you will be prompted to draw a polygon if none is provided as an input.
 
-# Links to other modules
+```{r moduleInputs, echo = FALSE, eval = TRUE}
+df_inputs <- SpaDES.core::moduleInputs("Biomass_speciesParameters", "..")
+knitr::kable(df_inputs)
+```
 
-Describe any anticipated linkages to other modules.
+### Creates Inputs
+
+Most of the inputs will be created automatically, if they are not provided by the user. 
+
+## Outputs
+
+This will show the outputs of this module, which can be used directly as the inputs for Biomass_core:
+
+```{r moduleOutputs, echo = FALSE, eval = TRUE}
+df_outputs <- SpaDES.core::moduleOutputs("Biomass_speciesParameters", "..")
+knitr::kable(df_outputs)
+```
+
+```{r outputs2}
+## species table
+simOut$speciesTable
+```
+
+```{r outputs3}
+Plot(simOut$biomassMap)
+simOut$studyAreaLarge <- spTransform(simOut$studyAreaLarge, crs(simOut$biomassMap))
+Plot(simOut$studyAreaLarge, addTo = "simOut$biomassMap")
+```
